chore: Phase 2B-2 Reflexion Part 3 & 4 outcomes
